# product-mock-generator

./: pyproject.toml
demo_dataset/: demo_dataset_faker.ipynb  products.json
demo_dataset/types/: common.py  smart_bulbs.py  smart_hubs.py  smart_switches.py  smart_thermostat.py  solar_panels.py  vacuum_robots.py
