[tool.poetry]
name = "demo-dataset"
version = "0.1.0"
description = ""
authors = ["Steffen Osterburg <steffen.osterburg@triluxds.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.20"
langchain-ollama = "^0.2.3"
faker = "^36.2.2"
pandas = "^2.2.3"
factory-boy = "^3.3.3"
langchain-core = "^0.3.44"
ollama = "^0.4.7"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
